fix background image alignment

--- a/styles.css
+++ b/styles.css
@@ -606,6 +606,8 @@ button:active {
 .contact-form {
   min-height: 718px;
   background-image: url("Image/background-Contact-me.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .title-contact {
